--- a/account.html
+++ b/account.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kacchi Khacci | Account</title>
+        <title>KACCHI KHACCI | Account</title>
         <link rel="shortcut icon" href="images/smalllogo.png" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
         <link rel="stylesheet" href="style.css">
@@ -12,7 +12,7 @@
     </head>
     <body onload="myload()">
         <div id="preloader">
-            <h1>Kacchi Khacci</h1>
+            <h1>KACCHI KHACCI</h1>
         </div>
             
         <!-- start main area -->
