--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     </head>
     <body onload="myload()">
         <div id="preloader">
-            <h1>Kacchi Khacci</h1>
+            <h1>KACCHI KHACCI</h1>
         </div>
             
         <!-- start main area -->
