--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Kacchi Khacci</title>
+        <title>KACCHI KHACCI</title>
         <link rel="shortcut icon" href="images/smalllogo.png" type="image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.core.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/css/glide.theme.css">
@@ -14,7 +14,7 @@
     </head>
     <body onload="myload()">
         <div id="preloader">
-            <h1>Kacchi Khacci</h1>
+            <h1>KACCHI KHACCI</h1>
         </div>
 
 
